--- a/ChampionMains.Pyrobot/packages.config
+++ b/ChampionMains.Pyrobot/packages.config
@@ -35,6 +35,7 @@
   <package id="SimpleInjector.Integration.Web" version="3.2.0" targetFramework="net452" />
   <package id="SimpleInjector.Integration.Web.Mvc" version="3.2.1" targetFramework="net452" />
   <package id="SimpleInjector.Integration.WebApi" version="3.2.0" targetFramework="net452" />
+  <package id="Strathweb.CacheOutput.WebApi2" version="0.10.0" targetFramework="net452" />
   <package id="System.Spatial" version="5.7.0" targetFramework="net452" />
   <package id="WebGrease" version="1.6.0" targetFramework="net452" />
   <package id="WindowsAzure.Storage" version="7.1.2" targetFramework="net452" />
