--- a/ChampionMains.Pyrobot.Data/ChampionMains.Pyrobot.Data.csproj
+++ b/ChampionMains.Pyrobot.Data/ChampionMains.Pyrobot.Data.csproj
@@ -199,6 +199,10 @@
     <Compile Include="Migrations\201612240740515_subreddituserflair-userid-index.Designer.cs">
       <DependentUpon>201612240740515_subreddituserflair-userid-index.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201707230032108_subreddit-add-flaircss-3.cs" />
+    <Compile Include="Migrations\201707230032108_subreddit-add-flaircss-3.Designer.cs">
+      <DependentUpon>201707230032108_subreddit-add-flaircss-3.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\Champion.cs" />
     <Compile Include="Models\CreatedModelBase.cs" />
@@ -310,6 +314,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201612240740515_subreddituserflair-userid-index.resx">
       <DependentUpon>201612240740515_subreddituserflair-userid-index.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201707230032108_subreddit-add-flaircss-3.resx">
+      <DependentUpon>201707230032108_subreddit-add-flaircss-3.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
