--- a/ChampionMains.Pyrobot/Web.template.config
+++ b/ChampionMains.Pyrobot/Web.template.config
@@ -37,6 +37,7 @@
     <add key="website.riotUpdateMin" value="00:00:10.000" />
     <add key="website.riotUpdateMax" value="05:50:00.000" />
     <add key="website.flairUpdate" value="05:50:00.000" />
+    <add key="website.hmacKey" value="" />
     <add key="security.admins" value="LugnutsK" />
     <add key="AzureWebJobsStorage" value="" />
   </appSettings>
