adding encrypted summoner id, updating to camille 2.0.0-alpha-nightly

--- a/ChampionMains.Pyrobot.Data/ChampionMains.Pyrobot.Data.csproj
+++ b/ChampionMains.Pyrobot.Data/ChampionMains.Pyrobot.Data.csproj
@@ -204,6 +204,10 @@
     <Compile Include="Migrations\201707230032108_subreddit-add-flaircss-3.Designer.cs">
       <DependentUpon>201707230032108_subreddit-add-flaircss-3.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201812160140222_summoner-add-encrypted-summonerid.cs" />
+    <Compile Include="Migrations\201812160140222_summoner-add-encrypted-summonerid.Designer.cs">
+      <DependentUpon>201812160140222_summoner-add-encrypted-summonerid.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\Champion.cs" />
     <Compile Include="Models\CreatedModelBase.cs" />
@@ -318,6 +322,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201707230032108_subreddit-add-flaircss-3.resx">
       <DependentUpon>201707230032108_subreddit-add-flaircss-3.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201812160140222_summoner-add-encrypted-summonerid.resx">
+      <DependentUpon>201812160140222_summoner-add-encrypted-summonerid.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
