--- a/ChampionMains.Pyrobot/ChampionMains.Pyrobot.csproj
+++ b/ChampionMains.Pyrobot/ChampionMains.Pyrobot.csproj
@@ -413,6 +413,7 @@
   </Target>
   -->
   <Target Name="BowerUpdate" BeforeTargets="Build">
+    <Exec Command="npm i -g bower" />
     <Exec Command="bower update --force" />
   </Target>
   <!-- update webjob config -->
