Use V4 encrypted summoner ids
Newly registered summoners will use V4. Old summoners will be
upgraded when their summoner is updated by user request or by the
bulk update job.

--- a/ChampionMains.Pyrobot.Data/ChampionMains.Pyrobot.Data.csproj
+++ b/ChampionMains.Pyrobot.Data/ChampionMains.Pyrobot.Data.csproj
@@ -208,6 +208,10 @@
     <Compile Include="Migrations\201812160140222_summoner-add-encrypted-summonerid.Designer.cs">
       <DependentUpon>201812160140222_summoner-add-encrypted-summonerid.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201812160523535_summoner-make-old-summonerid-optional.cs" />
+    <Compile Include="Migrations\201812160523535_summoner-make-old-summonerid-optional.Designer.cs">
+      <DependentUpon>201812160523535_summoner-make-old-summonerid-optional.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\Champion.cs" />
     <Compile Include="Models\CreatedModelBase.cs" />
@@ -325,6 +329,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201812160140222_summoner-add-encrypted-summonerid.resx">
       <DependentUpon>201812160140222_summoner-add-encrypted-summonerid.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201812160523535_summoner-make-old-summonerid-optional.resx">
+      <DependentUpon>201812160523535_summoner-make-old-summonerid-optional.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
