separate bulk update job and subreddit css update job

--- a/ChampionMains.Pyrobot.WebJob/ChampionMains.Pyrobot.WebJob.csproj
+++ b/ChampionMains.Pyrobot.WebJob/ChampionMains.Pyrobot.WebJob.csproj
@@ -169,6 +169,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Jobs\SubredditCssUpdateJob.cs" />
     <Compile Include="Jobs\ConsoleTestJob.cs" />
     <Compile Include="WebJobConfiguration.cs" />
     <Compile Include="Jobs\BulkUpdateJob.cs" />
