--- a/ChampionMains.Pyrobot/packages.config
+++ b/ChampionMains.Pyrobot/packages.config
@@ -17,8 +17,6 @@
   <package id="Microsoft.Azure.KeyVault.Core" version="1.0.0" targetFramework="net452" />
   <package id="Microsoft.CodeDom.Providers.DotNetCompilerPlatform" version="1.0.1" targetFramework="net452" />
   <package id="Microsoft.Data.Edm" version="5.7.0" targetFramework="net452" />
-  <package id="Microsoft.Data.OData" version="5.7.0" targetFramework="net452" />
-  <package id="Microsoft.Data.Services.Client" version="5.7.0" targetFramework="net452" />
   <package id="Microsoft.Net.Compilers" version="2.6.1" targetFramework="net452" developmentDependency="true" />
   <package id="Microsoft.NETCore.Platforms" version="1.1.0" targetFramework="net452" />
   <package id="Microsoft.Owin" version="3.0.1" targetFramework="net452" />
@@ -29,6 +27,7 @@
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net452" />
   <package id="Microsoft.Web.WebJobs.Publish" version="1.0.12" targetFramework="net452" />
   <package id="MingweiSamuel.Camille" version="2.0.0-alpha-nightly-2018-12-16-3842eae176" targetFramework="net452" />
+  <package id="Modernizr" version="2.6.2" targetFramework="net452" />
   <package id="NETStandard.Library" version="1.6.1" targetFramework="net452" />
   <package id="Newtonsoft.Json" version="9.0.1" targetFramework="net452" />
   <package id="Owin" version="1.0" targetFramework="net452" />
@@ -71,5 +70,4 @@
   <package id="System.Xml.ReaderWriter" version="4.3.0" targetFramework="net452" />
   <package id="System.Xml.XDocument" version="4.3.0" targetFramework="net452" />
   <package id="WebGrease" version="1.6.0" targetFramework="net452" />
-  <package id="WindowsAzure.Storage" version="7.1.2" targetFramework="net452" />
 </packages>
