--- a/ChampionMains.Pyrobot.Infrastructure/packages.config
+++ b/ChampionMains.Pyrobot.Infrastructure/packages.config
@@ -6,6 +6,8 @@
   <package id="Microsoft.Azure.KeyVault.Core" version="1.0.0" targetFramework="net452" />
   <package id="Microsoft.Azure.WebJobs.Core" version="1.1.2" targetFramework="net452" />
   <package id="Microsoft.Data.Edm" version="5.7.0" targetFramework="net452" />
+  <package id="Microsoft.Data.OData" version="5.7.0" targetFramework="net452" />
+  <package id="Microsoft.Data.Services.Client" version="5.7.0" targetFramework="net452" />
   <package id="Microsoft.NETCore.Platforms" version="1.1.0" targetFramework="net452" />
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net452" />
   <package id="MingweiSamuel.Camille" version="2.0.0-alpha-nightly-2018-12-16-3842eae176" targetFramework="net452" />
@@ -42,4 +44,5 @@
   <package id="System.Threading.Timer" version="4.3.0" targetFramework="net452" />
   <package id="System.Xml.ReaderWriter" version="4.3.0" targetFramework="net452" />
   <package id="System.Xml.XDocument" version="4.3.0" targetFramework="net452" />
+  <package id="WindowsAzure.Storage" version="7.1.2" targetFramework="net452" />
 </packages>
