--- a/ChampionMains.Pyrobot/packages.config
+++ b/ChampionMains.Pyrobot/packages.config
@@ -1,10 +1,12 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="AdvancedStringBuilder" version="0.1.0" targetFramework="net452" />
   <package id="Antlr" version="3.5.0.2" targetFramework="net452" />
-  <package id="BundleTransformer.Core" version="1.9.92" targetFramework="net452" />
-  <package id="BundleTransformer.SassAndScss" version="1.9.104" targetFramework="net452" />
+  <package id="BundleTransformer.Core" version="1.10.0" targetFramework="net452" />
+  <package id="BundleTransformer.SassAndScss" version="1.10.0" targetFramework="net452" />
   <package id="EntityFramework" version="6.1.3" targetFramework="net452" />
-  <package id="LibSassHost" version="0.5.1" targetFramework="net452" />
+  <package id="LibSassHost" version="1.2.2" targetFramework="net452" />
+  <package id="LibSassHost.Native.win-x86" version="1.2.0" targetFramework="net452" />
   <package id="Microsoft.AspNet.Identity.Core" version="2.2.1" targetFramework="net452" />
   <package id="Microsoft.AspNet.Identity.Owin" version="2.2.1" targetFramework="net452" />
   <package id="Microsoft.AspNet.Mvc" version="5.2.3" targetFramework="net452" />
@@ -27,7 +29,6 @@
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net452" />
   <package id="Microsoft.Web.WebJobs.Publish" version="1.0.12" targetFramework="net452" />
   <package id="MingweiSamuel.Camille" version="2.0.0-alpha-nightly-2018-12-16-3842eae176" targetFramework="net452" />
-  <package id="Modernizr" version="2.6.2" targetFramework="net452" />
   <package id="NETStandard.Library" version="1.6.1" targetFramework="net452" />
   <package id="Newtonsoft.Json" version="9.0.1" targetFramework="net452" />
   <package id="Owin" version="1.0" targetFramework="net452" />
