--- a/ChampionMains.Pyrobot/Web.template.config
+++ b/ChampionMains.Pyrobot/Web.template.config
@@ -159,6 +159,7 @@
       <requestFiltering>
         <hiddenSegments>
           <add segment="LibSassHost.Native" />
+          <add segment="node_modules" />
         </hiddenSegments>
       </requestFiltering>
     </security>
