--- a/ChampionMains.Pyrobot/package.json
+++ b/ChampionMains.Pyrobot/package.json
@@ -13,10 +13,15 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "dependencies": {
-    "bower": "^1.8.4",
+    "dialog-polyfill": "^0.4.10",
     "fitty": "^2.2.6",
     "material-design-lite": "^1.3.0",
-    "mdl-ext": "^0.17.1"
+    "mdl-ext": "^0.17.1",
+    "mdn-polyfills": "^5.15.0",
+    "native-promise-only": "^0.8.1",
+    "vue": "^2.5.21",
+    "vue-numeral-filter": "^1.1.1",
+    "whatwg-fetch": "^3.0.0"
   },
   "devDependencies": {}
 }
