--- a/ChampionMains.Pyrobot/package.json
+++ b/ChampionMains.Pyrobot/package.json
@@ -15,11 +15,13 @@
   "dependencies": {
     "dialog-polyfill": "^0.4.10",
     "fitty": "^2.2.6",
+    "getmdl-select": "^2.0.1",
     "material-design-lite": "^1.3.0",
     "mdl-ext": "^0.17.1",
     "mdn-polyfills": "^5.15.0",
     "native-promise-only": "^0.8.1",
     "vue": "^2.5.21",
+    "vue-moment": "^4.0.0",
     "vue-numeral-filter": "^1.1.1",
     "whatwg-fetch": "^3.0.0"
   },
