user model adding background skin id & migrations

--- a/ChampionMains.Pyrobot.Data/ChampionMains.Pyrobot.Data.csproj
+++ b/ChampionMains.Pyrobot.Data/ChampionMains.Pyrobot.Data.csproj
@@ -204,6 +204,10 @@
     <Compile Include="Migrations\201812190151072_update-summonerrank-enum.Designer.cs">
       <DependentUpon>201812190151072_update-summonerrank-enum.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201902042307188_user-add-backgroundskinid.cs" />
+    <Compile Include="Migrations\201902042307188_user-add-backgroundskinid.Designer.cs">
+      <DependentUpon>201902042307188_user-add-backgroundskinid.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\Champion.cs" />
     <Compile Include="Models\CreatedModelBase.cs" />
@@ -327,6 +331,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201812190151072_update-summonerrank-enum.resx">
       <DependentUpon>201812190151072_update-summonerrank-enum.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201902042307188_user-add-backgroundskinid.resx">
+      <DependentUpon>201902042307188_user-add-backgroundskinid.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
